[Android]1.add user service and ui; 2.add message service and ui.

--- a/Android/scenes/show/src/main/AndroidManifest.xml
+++ b/Android/scenes/show/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         <activity
             android:name=".LiveDetailActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="behind" />
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustNothing"/>
 
     </application>
 </manifest>
