--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 
     implementation rootProject.ext.deps.lyricsView
     implementation rootProject.ext.deps.annotation
-    implementation rootProject.ext.deps.material
+    api rootProject.ext.deps.material
     implementation rootProject.ext.deps.palette_ktx
     implementation rootProject.ext.deps.layout_kernel
     implementation rootProject.ext.deps.header_classics
