--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
     <application
         android:name="io.agora.scene.base.component.AgoraApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgoraKTV">
+        android:theme="@style/app_Theme.AgoraKTV">
         <activity
             android:name="com.agora.entfulldemo.welcome.WelcomeActivity"
             android:exported="true"
