--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -1,6 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-# platform :ios, '10.0'
+ platform :ios, '12.0'
 inhibit_all_warnings!
 
 def all_pods
@@ -56,7 +56,7 @@ def all_pods
 
   pod 'SocketRocket'
 #  pod 'Fastboard'
-  pod 'Agora-Scene-Utils', '~> 1.0.8'
+  pod 'Agora-Scene-Utils', '~> 1.1.0'
   
   #歌词组件
   pod 'AgoraLyricsScore', '~> 1.0.8'
