--- a/Android/scenes/show/.gitignore
+++ b/Android/scenes/show/.gitignore
@@ -1,3 +1,9 @@
-effectAAR-release.aar
+*.aar
+*.so
 src/main/assets/resource
 \build
+
+src/main/assets/filter_portrait
+src/main/assets/license
+src/main/assets/makeup_*
+src/main/assets/models
