--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -31,4 +31,6 @@ include ':common:ui-widget'
 //include ':scenes:voice:rtckit'
 
 include ':scenes:show'
-include ':scenes:show:aars'
+include ':scenes:show:aars:effectAAR'
+include ':scenes:show:aars:SenseArSourceManager'
+include ':scenes:show:aars:STMobileJNI'
