--- a/Android/scenes/show/.gitignore
+++ b/Android/scenes/show/.gitignore
@@ -7,3 +7,4 @@ src/main/assets/filter_portrait
 src/main/assets/license
 src/main/assets/makeup_*
 src/main/assets/models
+src/main/assets/sticker_face_shape
