[Show][Android]remove bytedance beauty and update README.

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -6,6 +6,10 @@ android {
         applicationId "io.agora.entfull"
         ndk.abiFilters 'armeabi-v7a'//, 'arm64-v8a'//, 'x86', 'x86-64'
     }
+
+    packagingOptions {
+        pickFirst 'lib/*/libc++_shared.so'
+    }
 }
 
 dependencies {
