--- a/Android/scenes/show/.gitignore
+++ b/Android/scenes/show/.gitignore
@@ -8,3 +8,4 @@ src/main/assets/license
 src/main/assets/makeup_*
 src/main/assets/models
 src/main/assets/sticker_face_shape
+src/main/assets/style_lightly
