--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
 }
 
+def localSdkPath= "sdk-4_1_1-kk"
+
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -40,10 +42,17 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs += "${localSdkPath}"
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: "${localSdkPath}", include: ['*.jar'])
     implementation rootProject.ext.deps.appcompat
     api rootProject.ext.deps.multidex
     implementation rootProject.ext.deps.annotation
@@ -69,7 +78,5 @@ dependencies {
     implementation rootProject.ext.deps.coroutines_android
     implementation rootProject.ext.deps.bugly
 
-    api rootProject.ext.deps.rtc
     api rootProject.ext.deps.rtm
-
 }
