--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -26,7 +26,7 @@ def all_pods
 #  pod 'libextobjc', '~> 0.4.1'
   pod 'MJExtension'
   # 键盘
-  pod 'IQKeyboardManager'
+  pod 'IQKeyboardManager', '6.5.10'
   # 变色龙
   pod 'ChameleonFramework'
   #弹框
@@ -76,6 +76,8 @@ def all_pods
   pod 'SVGAPlayer'
   pod 'KakaJSON'
   pod 'Agora_Chat_iOS', '1.0.8'
+
+  pod 'SwiftyBeaver', '1.9.5'
   
   #bugly
   pod 'Bugly','2.5.93'
