--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -70,6 +70,9 @@ def all_pods
   pod 'SVGAPlayer'
   pod 'KakaJSON'
   pod 'Agora_Chat_iOS', '1.0.8'
+#   pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+  pod 'SwiftyBeaver', '1.9.5'
+
   
   #bugly
   pod 'Bugly','2.5.93'
