--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -73,7 +73,7 @@ def all_pods
   pod 'KakaJSON'
   pod 'Agora_Chat_iOS', '1.0.8'
   pod 'SwiftyBeaver', '1.9.5'
-  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+ #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.5.93'
