--- a/iOS/ExportOptions.plist
+++ b/iOS/ExportOptions.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>uploadSymbols</key>
+	<true/>
 	<key>signingCertificate</key>
 	<string>Apple Development</string>
 	<key>provisioningProfiles</key>
