--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -40,9 +40,11 @@ def all_pods
   pod 'Agora-Scene-Utils', '1.0.9'
   
   #歌词组件
-  pod 'AgoraLyricsScore', '1.0.8.8'
+  pod "AgoraLyricsScore", :path => "../AgoraLyricsScore/AgoraLyricsScore.podspec"
+#  pod 'AgoraLyricsScore', '1.0.8.8'
 #  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :commit => 'f0613f7a8e11aa4e333f1dba2cfb2516d1140367'
   pod 'AgoraRtm_iOS', '1.5.1'
+  pod 'Zip'
   
   
   # Swift Code Formatter
