--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -63,6 +63,8 @@ def all_pods
 #  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :commit => 'f0613f7a8e11aa4e333f1dba2cfb2516d1140367'
   pod 'AgoraRtm_iOS'
   
+  pod 'AgoraSyncManager', '1.1.3'
+  
   
   # Swift Code Formatter
 #  pod 'SwiftFormat/CLI'
