--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -42,6 +42,7 @@ ext {
             layout_kernel     : 'com.scwang.smart:refresh-layout-kernel:2.0.3',
             header_classics   : 'com.scwang.smart:refresh-header-classics:2.0.3',
 
+            apng              : 'com.github.penfeizhou.android.animation:apng:1.3.1',
             xlog              : 'com.elvishew:xlog:1.6.1',
             logger            : 'com.orhanobut:logger:2.2.0',
             gson              : 'com.google.code.gson:gson:2.9.0',
