--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -35,10 +35,10 @@ def all_pods
   pod 'JXCategoryView'
   
   
-#  pod 'AgoraRtcEngine_iOS', '~> 4.0.1'
+  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
 #pod 'AgoraRtcEngine_iOS', '4.0.0-rc.1'
  # pod 'AgoraRtcEngine_Special_iOS', '4.0.1.4.full'
-  pod 'sdk', :path => 'sdk.podspec'
+#  pod 'sdk', :path => 'sdk.podspec'
 
 #  pod 'AgoraAudio_Special_iOS', '4.0.0.9'
 
