--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id 'kotlin-kapt'
 }
 
-def localSdkPath= "sdk-4_1_1-show"
-
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -42,17 +40,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    sourceSets {
-        main {
-            jniLibs.srcDirs += "${localSdkPath}"
-        }
-    }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api fileTree(dir: "${localSdkPath}", include: ['*.jar'])
     implementation rootProject.ext.deps.appcompat
     api rootProject.ext.deps.multidex
     implementation rootProject.ext.deps.annotation
@@ -79,4 +70,5 @@ dependencies {
     implementation rootProject.ext.deps.bugly
 
     api rootProject.ext.deps.rtm
+    api rootProject.ext.deps.rtc
 }
